Custom device symbols that can be netlisted. support rendering device name as text. Support GND symbol.

--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,7 @@ venv/
 ENV/
 env/
 
+
 # IDE
 .idea/
 .vscode/
@@ -41,6 +42,7 @@ output/
 .coverage
 htmlcov/
 commit_msg.txt
+tools/
 
 # OS specific
 .DS_Store
