--- a/.gitignore
+++ b/.gitignore
@@ -46,10 +46,13 @@ tools/
 *.svg
 
 # Test results
-tests/*/results/*.json
-tests/*/*/results/*.json
-tests/*/results/.DS_Store
-tests/*/*/results/.DS_Store
+# Ignore all results folders anywhere in the repository
+**/results/
+# Old specific patterns (keeping for reference but they're now redundant)
+# tests/*/results/*.json
+# tests/*/*/results/*.json
+# tests/*/results/.DS_Store
+# tests/*/*/results/.DS_Store
 
 # OS specific
 .DS_Store
